smallslive/static/sass/pages/_search.scss
/* ... */
@media (max-width: $screen-md-min) {
  .search-container .datepicker-container.noclick {
    top: 11.5vw !important;
  }
}

.instruments-container {
  flex-wrap: wrap;
  background-color: #f0f0eb;
  border: solid white;
  border-radius: 10px;
  display: none;
  position: absolute;
  margin: 0 15%;
  padding: 10px 20px;

  @media (max-width: $screen-md-max) {
    margin: 0;
    width: 100vw;
    position: absolute;
    height: 74vh;
    overflow-y: auto;
    top: 38px;
  }

  @media (min-width: $screen-lg-min) {
    width: 70%;
    left: 50px;
    padding: 30px 125px;

    .instrument {
      width: 80px;
    }
  }

  z-index: 100;

  .instrument {
    width: 130px;
    margin: 5px;

    @media (max-width: $screen-md-max) {
      font-size: 2em;
      margin: 0 15px;
      width: 150px;
    }

    &:hover {
      text-decoration: underline;
      color: $accent-color;
      cursor: pointer;
    }
  }
}
:root {
  --accessibility: 5px solid red !important;
}
// *:focus {
//   border: var(--accessibility);
//   box-sizing: content-box;
// }
.shows-filter-container {
  margin: 0 auto;
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: center;

  > * {
    display: inline-block;
    vertical-align: top;
  }

  .datepicker-container.noclick {
    @media (min-width: 1366px) {
      left: 170px !important;
    }

    @media (max-width: 1366px) and (min-width: 1024px) {
      left: 11.5vw !important;
    }
  }

  .white-border-select {
    &:not(.no-arrow) {
      .select-selected {
        @media (max-width: $screen-md-max) {
          padding: 0.5em;
          border: 3px solid rgba(255, 255, 255, 0.9);
          font-size: 2.5vw;
          height: 8vw;
          line-height: 2.5vw;
          margin-right: 5px;
          vertical-align: top;
        }

        @media (max-width: 420px) {
          height: 13vw;
          margin-top: 0;
        }

        &:hover {
          border-color: #e0e0dc;
          border-width: 3px;
        }

        &:after {
          @media (max-width: $screen-xs) {
            display: none;
          }
        }

        &.select-arrow-active {
          border-color: red;
          border-width: 3px;
          background: $white-transparent;
        }
      }
    }
  }

  @media (min-width: $screen-lg-min) {
    .white-border-select,
    .custom-date-picker {
      width: 120px;
    }

    > .white-border-button {
      margin-right: 20px;
    }

    > .white-border-select,
    > .white-border-button {
      background-color: #f0f0eb;
      width: 200px;
    }
  }

  @media (max-width: 1366px) and (min-width: 1024px) {
    > .white-border-select {
      width: 14vw;
    }
  }

  @media (max-width: $screen-md-max) {
    width: 100%;
    text-align: center;
  }

  @media (min-width: 1024px) {
    display: none;
  }

  @media (minx-width: 720px) {
    margin-bottom: 20px;
  }
}

#musicianContent .artist-arrows {
  position: absolute;
  width: auto;
  top: 140px;

  @media (max-width: $screen-md-max) {
    display: none;
  }

  .artist-arrow-search {
    z-index: 3;
    background-image: url(/static/image/arrow-right-black.svg);
    background-repeat: no-repeat;
    cursor: pointer;
    font-size: 62px;
    height: 69px;
    margin: 0 2vw;
    width: 35px;

    &.artist-arrow-disabled {
      color: $text-grey;
      cursor: not-allowed;
    }

    &.left_arrow {
      transform: scaleX(-1);
    }

    &.loading {
      background-image: url(/static/image/loading.gif);
      background-repeat: no-repeat;
      background-size: 50px;
      width: 100px;
    }
  }
}

.events-results {
  min-height: 100px;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  padding-top: 10px;

  .event-row {
    flex-wrap: wrap;
  }

  @media (max-width: $screen-sm-max) {
    padding-left: 0;
    padding-right: 0;

    .event-row {
      flex-wrap: wrap;
      padding: 0 0 0 20px;
    }
  }
}

.loading-image {
  margin-left: auto;
  margin-right: auto;
  display: none;
  height: 200px;

  align-items: center;

  img {
    width: 50px;
    height: 50px;
  }
}

.subheader-results {
  vertical-align: bottom;
}

.results-text {
  letter-spacing: 0;
  font-weight: 900;
  font-size: 1.2em;
}

.concerts-footer {
  margin-top: 30px;
  margin-bottom: 100px;
}

.load-more-btn {
  background-color: #f0f0eb;
  @include title1;
  font-size: 2.5em;
  width: auto;
  height: auto;
  padding: 10px 30px;
}

.page-numbers-list {
  list-style: none;
  padding: 0;
  margin-top: 10px;
}

.page-numbers-list-item {
  display: inline;
  font-weight: bold;
  color: #a6a6a6;
  margin-right: 5px;
  margin-left: 5px;
}

.active-page {
  font-weight: 900;
  color: black;
}

.change-page:hover {
  cursor: pointer;
  font-weight: 900;
  color: black;
}

.change-page > li:hover {
  font-weight: 900;
  color: black;
}

.event-section {
  display: flex;
  justify-content: space-between;
  align-content: center;
  margin: 0 auto;

  .select-selected {
    background-color: #f0f0eb;
    border: 3px solid rgba(255, 255, 255, 0.9);
  }

  .white-border-select {
    @include button1;
    position: relative;
    color: $black;

    &:not(.no-arrow) {
      .select-selected {
        &:after {
          right: 6%;
        }
      }
    }
  }

  .event-filter-select {
    @media (max-width: $screen-md-max) {
      width: $mobile-filter-button-width;
    }

    .select-items {
      top: 98%;
    }
  }
}

.search-artist-box-container {
  ::-webkit-scrollbar {
    display: none;
  }
}
/* ... */

